src/revmywrf/slurm_outputs/combined_w_hist_v9.txt
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/combined_w_hist_figsrc.py", line 36
    (dummy_bool, cutoff_bins, full_ss, \ incl_rain, incl_vent) = get_boolean_params(versionnum)
                                                                                              ^
SyntaxError: unexpected character after line continuation character
Traceback (most recent call last):
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/combined_w_hist_figsrc.py", line 170, in <module>
    main()
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/combined_w_hist_figsrc.py", line 103, in main
    incl_rain, incl_vent, versionstr)
  File "/global/home/users/kalatimer/proj/20supersat/src/revmywrf/combined_w_hist_figsrc.py", line 113, in make_and_save_w_hist
    alpha=0, linecolor='b')
  File "/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/__init__.py", line 1599, in inner
    return func(ax, *map(sanitize_sequence, args), **kwargs)
  File "/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/axes/_axes.py", line 6965, in hist
    p.update(kwargs)
  File "/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/artist.py", line 974, in update
    ret = [_update_property(self, k, v) for k, v in props.items()]
  File "/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/artist.py", line 974, in <listcomp>
    ret = [_update_property(self, k, v) for k, v in props.items()]
  File "/global/home/users/kalatimer/miniconda3/envs/supersatenv/lib/python3.7/site-packages/matplotlib/artist.py", line 970, in _update_property
    .format(type(self).__name__, k))
AttributeError: 'Rectangle' object has no property 'linecolor'
slurmstepd: error: *** JOB 27947256 ON n0050.lr6 CANCELLED AT 2020-11-24T15:30:52 ***
